Refactoring to eliminate warnings and (slightly) improve performance. Added @Override annotations, and added parameterizations for generic collections. Made small performance tweaks.